--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -345,8 +345,27 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/informe_o_nome_do_seu_orientador"
                 android:inputType="text" />
-
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/vagasDeInteresseTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/vagas_de_interesse"
+            app:layout_constraintTop_toBottomOf="@+id/mestradoAoDoutoradoLt" />
+
+        <EditText
+            android:id="@+id/vagasDeInteresseEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:hint="@string/informe_as_vagas_de_seu_interesse"
+            android:inputType="text"
+            app:layout_constraintTop_toBottomOf="@+id/vagasDeInteresseTv" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
