feat: setting features to main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
             android:text="@string/sexo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/celularCb" />
+            app:layout_constraintTop_toBottomOf="@+id/cellphoneEt" />
 
         <RadioGroup
             android:id="@+id/radioGroup2"
